added main page for user to see (search films / see films / add to favourite (only locally, not connected to db just yet) / recommendations part of page)

--- a/ukma-critic-frontend/src/pages/LoginPage.css
+++ b/ukma-critic-frontend/src/pages/LoginPage.css
@@ -36,9 +36,9 @@ a {
     background-color: var(--orange-white);
 }
 
-input {
-    background-color: var(--yellowish-white) !important;
-    border-color: var(--orange-black) !important;
+.login-page input {
+    background-color: var(--yellowish-white);
+    border-color: var(--orange-black);
 }
 
 .btn-outline-secondary {
