added films with reviews page (users can add reviews, see other reviews)

--- a/ukma-critic-frontend/src/pages/clients/Client.css
+++ b/ukma-critic-frontend/src/pages/clients/Client.css
@@ -78,3 +78,10 @@
     transform: scale(1.05);
 }
 
+.review-body {
+    background: var(--orange-white);
+}
+.review-body .title-name {
+    color: var(--orange);
+}
+
