disabled 'forgot password' button for now

--- a/ukma-critic-frontend/src/pages/LoginPage.css
+++ b/ukma-critic-frontend/src/pages/LoginPage.css
@@ -52,3 +52,8 @@ a {
     color: var(--lilac);
     border-color: var(--lilac);
 }
+
+.text-muted {
+    pointer-events: none;
+    opacity: 0.5;
+}
